--- a/login.html
+++ b/login.html
@@ -3,8 +3,15 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="component.css" media="screen" />
     </head>
     <body>
-        testando git
+        <form>
+            <h4>Login:<input type="text" name="login" maxlength="50"/></h4>
+            <h4>Senha:<input type="password" name="senha" maxlength="20"/></h4>
+            <div>
+                <input type="submit" value="ENTRAR"/>
+            </div>
+        </form>
     </body>
 </html>
