--- a/login.html
+++ b/login.html
@@ -1,17 +1,32 @@
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="component.css" media="screen" />
+        <link rel="stylesheet" type="text/css" 
+              href="component.css" media="screen" />
     </head>
     <body>
-        <form>
-            <h4>Login:<input type="text" name="login" maxlength="50"/></h4>
-            <h4>Senha:<input type="password" name="senha" maxlength="20"/></h4>
-            <div>
-                <input type="submit" value="ENTRAR"/>
-            </div>
+        <form action="index.php" method="post">
+            <fieldset style="width: 500px;height: 100px;
+                      border: none;margin-left: 500px;margin-top: 250px">
+                <div class="row">
+                    <label for="login" style="color: black">Login:</label>
+                    <input id="login" type="text" name="login" 
+                           size="30" maxlength="200"/>
+                </div>
+                <br/>
+                <div class="row">
+                    <label for="senha" style="color: black">Senha:</label>
+                    <input id="senha" type="password" 
+                           name="senha" size="30" maxlength="20" 
+                           required=""/>
+                </div>
+                <br/>
+                <div style="margin-left: 120px">
+                    <input type="submit" value="ENTRAR"/>
+                </div>
+            </fieldset>
         </form>
     </body>
 </html>
