--- a/login/login.html
+++ b/login/login.html
@@ -4,12 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" 
-              href="component.css" media="screen" />
+              href="../component.css" media="screen" />
     </head>
-    <body>
+    <body class="teste">
         <form action="index.php" method="post">
-            <fieldset style="width: 500px;height: 100px;
-                      border: none;margin-left: 500px;margin-top: 250px">
+            <fieldset class="fieldset-login">
                 <div class="row">
                     <label for="login" style="color: black">Login:</label>
                     <input id="login" type="text" name="login" 
@@ -20,11 +19,11 @@
                     <label for="senha" style="color: black">Senha:</label>
                     <input id="senha" type="password" 
                            name="senha" size="30" maxlength="20" 
-                           required=""/>
+                           required="" class="button-login"/>
                 </div>
                 <br/>
-                <div style="margin-left: 120px">
-                    <input type="submit" value="ENTRAR"/>
+                <div class="div-button-login">
+                    <input type="submit" value="ENTRAR" class="button-login"/>
                 </div>
             </fieldset>
         </form>
