testando conexões e redirecionamentos

--- a/login/login.html
+++ b/login/login.html
@@ -7,7 +7,7 @@
               href="../component.css" media="screen" />
     </head>
     <body class="teste">
-        <form action="index.php" method="post">
+        <form action="login.php" method="post">
             <fieldset class="fieldset-login">
                 <div class="row">
                     <label for="login" style="color: black">Login:</label>
